// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clear image rendering 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "display": "inline-block",
      "margin": 0,
      "maxWidth": "100%",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "maxWidth": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
      style={
        Object {
          "border": "none",
          "display": "block",
          "margin": 0,
          "maxWidth": "100%",
          "padding": 0,
        }
      }
    />
  </div>
  <img
    alt="clear-marker-some-ui-location"
    data-nimg="intrinsic"
    decoding="async"
    draggable={false}
    id="clear-marker-some-ui-location"
    src="/_next/image?url=%2Fplayer-marker%2Fclear.png&w=256&q=75"
    srcSet="/_next/image?url=%2Fplayer-marker%2Fclear.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fclear.png&w=256&q=75 2x"
    style={
      Object {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  />
  <noscript>
    <img
      alt="clear-marker-some-ui-location"
      data-nimg="intrinsic"
      decoding="async"
      draggable={false}
      id="clear-marker-some-ui-location"
      loading="lazy"
      src="/_next/image?url=%2Fplayer-marker%2Fclear.png&w=256&q=75"
      srcSet="/_next/image?url=%2Fplayer-marker%2Fclear.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fclear.png&w=256&q=75 2x"
      style={
        Object {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
  </noscript>
</div>
`;

exports[`o image rendering 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "display": "inline-block",
      "margin": 0,
      "maxWidth": "100%",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "maxWidth": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
      style={
        Object {
          "border": "none",
          "display": "block",
          "margin": 0,
          "maxWidth": "100%",
          "padding": 0,
        }
      }
    />
  </div>
  <img
    alt="o-marker-some-ui-location"
    data-nimg="intrinsic"
    decoding="async"
    draggable={false}
    id="o-marker-some-ui-location"
    src="/_next/image?url=%2Fplayer-marker%2Fo.png&w=256&q=75"
    srcSet="/_next/image?url=%2Fplayer-marker%2Fo.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fo.png&w=256&q=75 2x"
    style={
      Object {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  />
  <noscript>
    <img
      alt="o-marker-some-ui-location"
      data-nimg="intrinsic"
      decoding="async"
      draggable={false}
      id="o-marker-some-ui-location"
      loading="lazy"
      src="/_next/image?url=%2Fplayer-marker%2Fo.png&w=256&q=75"
      srcSet="/_next/image?url=%2Fplayer-marker%2Fo.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fo.png&w=256&q=75 2x"
      style={
        Object {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
  </noscript>
</div>
`;

exports[`red o image rendering 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "display": "inline-block",
      "margin": 0,
      "maxWidth": "100%",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "maxWidth": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
      style={
        Object {
          "border": "none",
          "display": "block",
          "margin": 0,
          "maxWidth": "100%",
          "padding": 0,
        }
      }
    />
  </div>
  <img
    alt="redo-marker-some-ui-location"
    data-nimg="intrinsic"
    decoding="async"
    draggable={false}
    id="redo-marker-some-ui-location"
    src="/_next/image?url=%2Fplayer-marker%2Fredo.png&w=256&q=75"
    srcSet="/_next/image?url=%2Fplayer-marker%2Fredo.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fredo.png&w=256&q=75 2x"
    style={
      Object {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  />
  <noscript>
    <img
      alt="redo-marker-some-ui-location"
      data-nimg="intrinsic"
      decoding="async"
      draggable={false}
      id="redo-marker-some-ui-location"
      loading="lazy"
      src="/_next/image?url=%2Fplayer-marker%2Fredo.png&w=256&q=75"
      srcSet="/_next/image?url=%2Fplayer-marker%2Fredo.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fredo.png&w=256&q=75 2x"
      style={
        Object {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
  </noscript>
</div>
`;

exports[`red x image rendering 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "display": "inline-block",
      "margin": 0,
      "maxWidth": "100%",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "maxWidth": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
      style={
        Object {
          "border": "none",
          "display": "block",
          "margin": 0,
          "maxWidth": "100%",
          "padding": 0,
        }
      }
    />
  </div>
  <img
    alt="redx-marker-some-ui-location"
    data-nimg="intrinsic"
    decoding="async"
    draggable={false}
    id="redx-marker-some-ui-location"
    src="/_next/image?url=%2Fplayer-marker%2Fredx.png&w=256&q=75"
    srcSet="/_next/image?url=%2Fplayer-marker%2Fredx.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fredx.png&w=256&q=75 2x"
    style={
      Object {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  />
  <noscript>
    <img
      alt="redx-marker-some-ui-location"
      data-nimg="intrinsic"
      decoding="async"
      draggable={false}
      id="redx-marker-some-ui-location"
      loading="lazy"
      src="/_next/image?url=%2Fplayer-marker%2Fredx.png&w=256&q=75"
      srcSet="/_next/image?url=%2Fplayer-marker%2Fredx.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fredx.png&w=256&q=75 2x"
      style={
        Object {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
  </noscript>
</div>
`;

exports[`x image rendering 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "display": "inline-block",
      "margin": 0,
      "maxWidth": "100%",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "maxWidth": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
      style={
        Object {
          "border": "none",
          "display": "block",
          "margin": 0,
          "maxWidth": "100%",
          "padding": 0,
        }
      }
    />
  </div>
  <img
    alt="x-marker-some-ui-location"
    data-nimg="intrinsic"
    decoding="async"
    draggable={false}
    id="x-marker-some-ui-location"
    src="/_next/image?url=%2Fplayer-marker%2Fx.png&w=256&q=75"
    srcSet="/_next/image?url=%2Fplayer-marker%2Fx.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fx.png&w=256&q=75 2x"
    style={
      Object {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  />
  <noscript>
    <img
      alt="x-marker-some-ui-location"
      data-nimg="intrinsic"
      decoding="async"
      draggable={false}
      id="x-marker-some-ui-location"
      loading="lazy"
      src="/_next/image?url=%2Fplayer-marker%2Fx.png&w=256&q=75"
      srcSet="/_next/image?url=%2Fplayer-marker%2Fx.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fx.png&w=256&q=75 2x"
      style={
        Object {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
  </noscript>
</div>
`;

exports[`yellow o image rendering 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "display": "inline-block",
      "margin": 0,
      "maxWidth": "100%",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "maxWidth": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
      style={
        Object {
          "border": "none",
          "display": "block",
          "margin": 0,
          "maxWidth": "100%",
          "padding": 0,
        }
      }
    />
  </div>
  <img
    alt="yellowo-marker-some-ui-location"
    data-nimg="intrinsic"
    decoding="async"
    draggable={false}
    id="yellowo-marker-some-ui-location"
    src="/_next/image?url=%2Fplayer-marker%2Fyellowo.png&w=256&q=75"
    srcSet="/_next/image?url=%2Fplayer-marker%2Fyellowo.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fyellowo.png&w=256&q=75 2x"
    style={
      Object {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  />
  <noscript>
    <img
      alt="yellowo-marker-some-ui-location"
      data-nimg="intrinsic"
      decoding="async"
      draggable={false}
      id="yellowo-marker-some-ui-location"
      loading="lazy"
      src="/_next/image?url=%2Fplayer-marker%2Fyellowo.png&w=256&q=75"
      srcSet="/_next/image?url=%2Fplayer-marker%2Fyellowo.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fyellowo.png&w=256&q=75 2x"
      style={
        Object {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
  </noscript>
</div>
`;

exports[`yellow x image rendering 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "display": "inline-block",
      "margin": 0,
      "maxWidth": "100%",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "maxWidth": "100%",
      }
    }
  >
    <img
      alt=""
      aria-hidden={true}
      src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
      style={
        Object {
          "border": "none",
          "display": "block",
          "margin": 0,
          "maxWidth": "100%",
          "padding": 0,
        }
      }
    />
  </div>
  <img
    alt="yellowx-marker-some-ui-location"
    data-nimg="intrinsic"
    decoding="async"
    draggable={false}
    id="yellowx-marker-some-ui-location"
    src="/_next/image?url=%2Fplayer-marker%2Fyellowx.png&w=256&q=75"
    srcSet="/_next/image?url=%2Fplayer-marker%2Fyellowx.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fyellowx.png&w=256&q=75 2x"
    style={
      Object {
        "border": "none",
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "block",
        "height": 0,
        "left": 0,
        "margin": "auto",
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minHeight": "100%",
        "minWidth": "100%",
        "objectFit": undefined,
        "objectPosition": undefined,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  />
  <noscript>
    <img
      alt="yellowx-marker-some-ui-location"
      data-nimg="intrinsic"
      decoding="async"
      draggable={false}
      id="yellowx-marker-some-ui-location"
      loading="lazy"
      src="/_next/image?url=%2Fplayer-marker%2Fyellowx.png&w=256&q=75"
      srcSet="/_next/image?url=%2Fplayer-marker%2Fyellowx.png&w=128&q=75 1x, /_next/image?url=%2Fplayer-marker%2Fyellowx.png&w=256&q=75 2x"
      style={
        Object {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 0,
        }
      }
    />
  </noscript>
</div>
`;
